<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- activity_main /-->
    <string name="app_name">CCT Help</string>
    <string name="action_settings">Settings</string>
    <string name="calc_release_point">Cálculos del punto de suelta</string>
    <string name="dz_main_menu">Zonas de Lanzamiento (DZ)</string>
	<string name="lz_main_menu">Zonas de Aterrizaje (LZ)</string>
    <string name="check_list_main_menu">Check List</string>
    <string name="herramientas_main_menu">Herramientas</string>
    <string name="manuales_main_menu">Manuales</string>
    
    <!-- submenu_calculos_sondeo -->
    <string name="calc_auto_submenu_sondeo">Cálculos para automático</string>
	<string name="calc_man_submenu_sondeo">Cálculos para manual</string>
	<string name="calc_carg_submenu_sondeo">Cálculos para cargas</string>
    
	<!-- submenu_calculos_manual -->
    <string name="calc_halo_submenu_man">Cálculos HALO</string>
    <string name="calc_haho_submenu_man">Cálculos HAHO</string>
    <string name="calc_halo_haho_submenu_man">Cáculos HALO-HAHO</string>
    
	<!-- calculos_automatico -->
	<string name="calc_aut_app_title">Lanzamiento Automático</string>
	<string name="carp_title">CARP: Cálculo punto suelta</string>
	<string name="introduce_datos">Introduce los datos solicitados</string>
	<string name="altura">Altura</string>
	<string name="azimut">Azimut</string>
	<string name="elevacion">Elevación</string>
    <string name="btn_calcular">Calcular</string>
    <string name="dist_carp">Distancia al CARP:</string>
    <string name="rumbo">Rumbo:</string>
    
    <!-- calculos_manual_haho -->
    <string name="harp_title">HARP: Cálculo punto suelta</string>
    <string name="calc_man_app_title">Lanzamiento Manual</string>
    <string name="ConstanteC">C</string>
    <string name="ConstanteK">K</string>
    
    
   
</resources>
