<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnmainmenu1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_release_point"
        android:height="50dp"
        android:background="@drawable/buttonlayoutselector"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btnmainmenu2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dz_main_menu" 
        android:height="50dp"
        android:background="@drawable/buttonlayoutselector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnmainmenu3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lz_main_menu"
        android:height="50dp"
        android:background="@drawable/buttonlayoutselector"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btnmainmenu4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_list_main_menu" 
        android:height="50dp"
        android:background="@drawable/buttonlayoutselector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnmainmenu5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/herramientas_main_menu"
        android:height="50dp"
        android:background="@drawable/buttonlayoutselector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnmainmenu6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/manuales_main_menu"
        android:height="50dp"
        android:background="@drawable/buttonlayoutselector"
        android:onClick="onClick" />
</LinearLayout>
