<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnsbmcalcman1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_halo_submenu_man"
        android:height="50dp"
        android:background="@drawable/buttonlayoutselector"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btnsbmcalcman2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_haho_submenu_man" 
        android:height="50dp"
        android:background="@drawable/buttonlayoutselector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnsbmcalcman3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_halo_haho_submenu_man"
        android:height="50dp"
        android:background="@drawable/buttonlayoutselector"
        android:onClick="onClick" />
</LinearLayout>
