<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

	    <TextView
	        android:id="@+id/tvTitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/carp_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/tvSubTitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/introduce_datos"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="#777777"/>
	
	    <View
	        android:id="@+id/linea"
	        android:layout_width="match_parent"
	        android:layout_height="10dp"
	        android:background="@drawable/linea">
	    </View>
	
	</LinearLayout>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="20dp">
	    
		<TextView
		    android:id="@+id/tvaltura"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="5dp"
		    android:text="@string/altura" />
		
		<EditText
		    android:id="@+id/etaltura"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/tvaltura"
		    android:layout_centerInParent="false"
		    android:gravity="center_vertical|center_horizontal"
		    android:inputType="number"
		    android:maxWidth="100dp"
		    android:minWidth="100dp"
		    android:singleLine="true"
		    android:text="1200" />
		
		<TextView
		    android:id="@+id/tvazimut"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="15dp"
		    android:layout_toRightOf="@id/etaltura"
		    android:text="@string/azimut" />
		
		<EditText
		    android:id="@+id/etazimut"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBaseline="@id/etaltura"
		    android:layout_marginLeft="10dp"
		    android:layout_toRightOf="@id/etaltura"
		    android:gravity="center_vertical|center_horizontal"
		    android:inputType="number"
		    android:maxWidth="70dp"
		    android:minWidth="70dp"
		    android:singleLine="true"
		    android:text="235" />
		
		<TextView
		    android:id="@+id/tvelevacion"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="15dp"
		    android:layout_toRightOf="@id/etazimut"
		    android:text="@string/elevacion" />
		
		<EditText
		    android:id="@+id/etelevacion"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBaseline="@id/etaltura"
		    android:layout_marginLeft="10dp"
		    android:layout_toRightOf="@id/etazimut"
		    android:gravity="center_vertical|center_horizontal"
		    android:inputType="number"
		    android:maxWidth="70dp"
		    android:minWidth="70dp"
		    android:singleLine="true"
		    android:text="46" />
	    
	</RelativeLayout>

	<Spinner 
	    android:id="@+id/spparacaidas"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:contentDescription="Tipo de paracaidas"
	    android:entries="@array/paracas_auto"/>
	
	<Spinner 
	    android:id="@+id/spzonalanzamiento"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:entries="@array/Zonas"/>

	<Button
	    android:id="@+id/btnCalcular"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:layout_marginBottom="10dp"
	    android:layout_marginTop="10dp"
	    android:background="@drawable/buttonlayoutselector"
	    android:gravity="center_vertical|center_horizontal"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp"
	    android:text="@string/btn_calcular" />
	
		<View
	        android:id="@+id/linea1"
	        android:layout_width="match_parent"
	        android:layout_height="10dp"
	        android:background="@drawable/linea">
	    </View>
	    <View
	        android:id="@+id/linea2"
	        android:layout_width="match_parent"
	        android:layout_height="10dp"
	        android:background="@drawable/linea">
	    </View>
	    
	    <LinearLayout
	        android:id="@+id/linear2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:visibility="invisible" >
		
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/dist_carp" />

	        <TextView
	            android:id="@+id/tvDistancia"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rumbo" />

	        <TextView
	            android:id="@+id/tvRumbo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	    </LinearLayout>

</LinearLayout>
